Oppdater build.gradle.kts (#288)
* Rename til FellesTestOppsett

* Oppdater Testcontainers

* Oppdater build.gradle.ktsa